[metadata]
name = pbench
summary = A benchmarking and performance analysis framework
description-file =
    README.md
author = Pbench by Red Hat
maintainer = Pbench by Red Hat
home-page = https://github.com/distributed-system-analysis/pbench
classifier =
   Programming Language :: Python :: 3.6,
   License :: OSI Approved :: GNU General Public License v3 (GPLv3),
   Operating System :: OS Independent,

[files]
packages = pbench

[entry_points]
console_scripts = 
    pbench = pbench.cli.agent.shell:main
    pbench-config = pbench.cli.getconf:main
    pbench-agent-config-activate = pbench.cli.agent.commands.config:activate_config
    pbench-agent-config-ssh-key = pbench.cli.agent.commands.config:configure_ssh
    pbench-cleanup = pbench.cli.agent.commands.cleanup:pbench_cleanup
    pbench-clear-results = pbench.cli.agent.commands.cleanup:pbench_clear_results
    pbench-clear-tools = pbench.cli.agent.commands.cleanup:clear_tools
    
[tools:pytest]
testpaths = pbench/test
