[metadata]
name = pbench
summary = A benchmarking and performance analysis framework
description-file =
    README.md
author = Pbench by Red Hat
maintainer = Pbench by Red Hat
home-page = https://github.com/distributed-system-analysis/pbench
classifier =
   Programming Language :: Python :: 3.6,
   License :: OSI Approved :: GNU General Public License v3 (GPLv3),
   Operating System :: OS Independent,

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =lib

[options.packages.find]
where = lib

[entry_points]
console_scripts = 
   pbench-server = pbench.cli.server.shell:main
   pbench-config = pbench.cli.getconf:main

   pbench = pbench.cli.agent.cli:main
   # backwards compatibility
   pbench-tool-data-sink = pbench.cli.agent.commands.tools.sink:main
   pbench-tool-meister = pbench.cli.agent.commands.tools.meister:main
   pbench-tool-meister-client = pbench.cli.agent.commands.tools.client:main
   pbench-tool-meister-start = pbench.cli.agent.commands.tools.start:main
   pbench-tool-meister-stop = pbench.cli.agent.commands.tools.stop:main
   pbench-cleanup = pbench.cli.agent.commands.cleanup:cleanup

[tools:pytest]
testpaths = lib/pbench/test
