[metadata]
name = pbench
summary = A benchmarking and performance analysis framework
description-file =
    README.md
author = Pbench by Red Hat
maintainer = Pbench by Red Hat
home-page = https://github.com/distributed-system-analysis/pbench
classifier =
   Programming Language :: Python :: 3.6,
   License :: OSI Approved :: GNU General Public License v3 (GPLv3),
   Operating System :: OS Independent,

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =lib

[options.packages.find]
where = lib

[entry_points]
console_scripts = 
   pbench-server = pbench.cli.server.shell:main
   pbench-config = pbench.cli.getconf:main

   pbench = pbench.cli.agent.cli:main
   # backwards compatibility
   pbench-tool-data-sink = pbench.cli.agent.commands.tools.sink:main
   pbench-tool-meister = pbench.cli.agent.commands.tools.meister:main
   pbench-tool-meister-start = pbench.cli.agent.commands.meister.start:start
   pbench-tool-meister-stop = pbench.cli.agent.commands.meister.stop:stop
   pbench-start-tools = pbench.cli.agent.commands.tools.process:start
   pbench-stop-tools = pbench.cli.agent.commands.tools.process:stop
   pbench-kill-tools = pbench.cli.agent.commands.tools.process:kill
   pbench-postprocess-tools = pbench.cli.agent.commands.tools.process:postprocess
   pbench-cleanup = pbench.cli.agent.commands.cleanup:cleanup
   pbench-agent-config-activate = pbench.cli.agent.commands.config:activate
   pbench-agent-config-ssh-key = pbench.cli.agent.commands.config:ssh
   pbench-clear-tools = pbench.cli.agent.commands.tools.clear:clear
   pbench-list-tools = pbench.cli.agent.commands.tools.list:list
   pbench-register-tool = pbench.cli.agent.commands.tools.register:register
   pbench-avg-stddev = pbench.cli.agent.commands.stddev:stddev


[tools:pytest]
testpaths = lib/pbench/test
